<resources>
    <string name="app_name">HardSleepers</string>

    <string name="loading_prograss">Loading…</string>


    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">253299899084-9ob907llaiul9s7qerrt5bs509q6vdkr.apps.googleusercontent.com</string>

    <string name="API_KEY">AIzaSyDyHw1toj0QHV128Z7Pcu_MxaODa-eNHEs</string>

    <string name="userNameLoginLabel">Username:</string>
    <string name="userNameLoginTextEdit">Email</string>
    <string name="passwordLoginLabel">Password:</string>
    <string name="passwordLoginTextEdit">Password</string>

    <string name="self_login_button_text">Log In</string>
    <string name="remember_me_check_box">Remember me</string>
    <string name="please_login_label">Please login the system.</string>

    <string name="coming_soon_notice">Will be available soon!\nEliya is working on it...</string>

</resources>
